services/infra/kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /$($appName1)/?(.*)
        backend:
          serviceName: $($appName1)
          servicePort: 80
      - path: /$($appName2)/?(.*)
        backend:
          serviceName: $($appName2)
          servicePort: 80
